--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
      - POSTGRES_PORT=5432
      - POSTGRES_DB=capstone
     ports:
-     - '5432:5432'
+     - '5432:5433'
     healthcheck:
         test: ["CMD-SHELL", "pg_isready -U postgres"]
         interval: 5s
@@ -29,7 +29,7 @@ services:
     image: dpage/pgadmin4
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: phillip.witkin@galvanize.com
+      PGADMIN_DEFAULT_EMAIL: yo@example.com
       PGADMIN_DEFAULT_PASSWORD: docker
       PGADMIN_LISTEN_PORT: 80
     ports:
