--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -8,4 +8,4 @@ RUN npm install
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["API_URL=$API_URL","REACT_APP_NODE_ENV=$REACT_APP_NODE_ENV", "npm", "start"]
